dark mode fixes

--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,9 @@
     right: 0;
     top:0;
   }
+
+  @media (prefers-color-scheme: dark) {
+    canvas {
+        filter: invert(1) hue-rotate(180deg);
+    }
+}
